# depmap_analysis

./: setup.cfg  tox.ini
.github/workflows/: tests.yml
depmap_analysis/explainer/: __init__.py  depmap_explainer.py
depmap_analysis/luigi/: run_depmap.py
depmap_analysis/network_functions/: depmap_network_functions.py  net_functions.py
depmap_analysis/post_processing/: expl_proportions.py  post_processing.py  util.py
depmap_analysis/preprocessing/: depmap_preprocessing.py
depmap_analysis/scripts/: depmap_meta.py  depmap_script2.py  depmap_script_expl_funcs.py  drug_script.py  dump_new_graphs.py  gather_all_corr_stats.py  log_to_stats.py
depmap_analysis/tests/: __init__.py  test_graph_generation.py  test_meta_script.py  test_script.py  test_z_sc_calc.py
depmap_analysis/util/: aws.py  io_functions.py  statistics.py
