[metadata]
name = depmap_analysis
version = 1.0.0
long_description = file: readme.md
long_description_content_type = text/markdown

[options]
install_requires =
    indra[explanation,bel,graph]
    indra_db @ git+https://github.com/indralab/indra_db
    matplotlib

include_package_data = True
python_requires = >=3.9

[options.extras_require]
tests =
    pytest
