[metadata]
name = depmap_analysis
version = 1.0.0
long_description = file: readme.md
long_description_content_type = text/markdown

[options]
install_requires =
    indra[explanation,bel,graph]
    indra_db @ git+https://github.com/indralab/indra_db
    matplotlib
    numpy<2.0

include_package_data = True
python_requires = >=3.9
packages = find:

[options.packages.find]
where = depmap_analysis

[options.extras_require]
tests =
    pytest
